--- a/mod2-References.bib
+++ b/mod2-References.bib
@@ -46,4 +46,31 @@
   year={2012},
   publisher={Elsevier}
 }
+@misc{fenton_2024_take,
+  author = {Fenton, Caela},
+  month = {07},
+  title = {Take a look inside the Paris 2024 Olympic Village},
+  url = {https://olympic.ca/2024/07/25/take-a-look-inside-the-paris-2024-olympic-village/},
+  year = {2024},
+  organization = {Team Canada - Official Olympic Team Website}
+}
+@misc{mcdermott_2026_inside,
+  author = {Mcdermott, Jennifer},
+  month = {02},
+  title = {Inside Cortina's Olympic Village: A snowy haven for hundreds of athletes},
+  url = {https://www.cbc.ca/sports/olympics/winter/inside-cortina-s-olympic-village-a-snowy-haven-for-hundreds-of-athletes-9.7072583},
+  urldate = {2026-02-24},
+  year = {2026},
+  organization = {CBC}
+}
 
+@article{bjornstad2020seirs,
+  title={The SEIRS model for infectious disease dynamics.},
+  author={Bj{\o}rnstad, Ottar N and Shea, Katriona and Krzywinski, Martin and Altman, Naomi},
+  journal={Nature methods},
+  volume={17},
+  number={6},
+  pages={557--559},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
