Final initial draft

--- a/inital_research_report.tex
+++ b/inital_research_report.tex
@@ -14,9 +14,9 @@
 
 \begin{document}
 \maketitle
-\section*{Abstract}
 
 \section*{Introduction}
+
 With 2026 being the year of the Milano Cortina Winter Olympics many reoccurring social, economic and theoretical questions are asked. This year on February 5th, a press release was issues as many players on the Finnish women's ice hockey team having been infected with Norovirus or have been placed in isolation leading to the postponement of their first game of this Olympics versus team Canada \cite{salvian_2026_finlandcanada}. This theme continued later into the games when a member of the Switzerland women's ice hockey team also had contracted Norovirus and some additional teammates being but in isolation. The possibility of an epidemic event at the Olympics has been heavily discussed over the course of the last decade spanning both summer and winter games; from the Vancouver 2010 with the threat of H1N1, Rio 2016 with Zika virus and with the Tokyo 2020 games and the Beijing 2022 games being impacted by the Covid-19 global pandemic. The threat of an epidemic event occurring due to the games has been likely, especially with regards of  increased travel to the Olympics by supporters, athletes, staff increasing the risk of epidemic events in the region. One interesting aspects with respect to this increased risk is the dynamics inside the Olympic village. Due to the nature of the games it create a small area with the gathering on thousands of individuals from hundreds of countries living closely together all at the top level of health and athletic ability for their respective sports. Although they may have separate "country buildings" as displayed by the current on going Olympics. There is a magnitude of common spaces such as dinning halls. Not to mention the increasing number of inter-athlete interactions during completion and for other official events surrounding the games such as organized ceremonies, exhibitions and pin trading. It create a unique environment with the typical dynamics of epidemiological models don't consider. there are many different structure of epidemic models that all have reasonable and useful applications. Many being based of stochastic models. such as discrete time Markov chain (DTMC) model where variables for both time and state are discrete. There is also a similar model known as continuous time Markov chain (CTMC) model whereby time is continuous but state variables remain discrete. Or the base model stochastic differential equation (SDE) model where both variables are continuous. \cite{allen2008introduction}  For the SIS epidemic model with differentials that describe the model dynamics as:\\
 \begin{align}
     \begin{split}
@@ -45,10 +45,9 @@ where $\beta > 0, \gamma > 0, b >= 0 $ and N the total population satisfies $ N 
 	\end{split}
 \end{align}
 
-S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is the exposed the sum of these values are equal to N(t) the total population. $\mu$ is the death rate due to causes other than disease. $\gamma$ is the number of contacts multiplied by the probability of infection as a function of time, therefore is equal to the transmission rate of the modelled disease. $\alpha$ is the removal rate and $ b $ is the per capita birth rate with $ b > \mu $ $f$ is the probability $f(0\leq f\geq 1)$ that the individual recovers and acquires permanent immunity  and $\tau$ is the latent period.\cite{an2006seir} With the introduction of the latent period this becomes a great base model for the possibility of an epidemic at the Olympic games.
+S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is the exposed the sum of these values are equal to N(t) the total population. $\mu$ is the death rate due to causes other than disease. $\gamma$ is the number of contacts multiplied by the probability of infection as a function of time, therefore is equal to the transmission rate of the modelled disease. $\alpha$ is the removal rate and $ b $ is the per capita birth rate with $ b > \mu $ $f$ is the probability $f(0\leq f\geq 1)$ that the individual recovers and acquires permanent immunity  and $\tau$ is the latent period.\cite{yan2006seir} With the introduction of the latent period this becomes a great base model for the possibility of an epidemic at the Olympic games.
 
  \section*{Methods}
- 
  Moving Forward with the SEIR model with delay equation system (3). there is some immediate simplifications that can be made to the overall systems due to the nature of the population. The assumption can be made that the population over the two weeks of the games will be constant. This is then means it can be assumes the per capita birth rate would have to equal 0 as there is no individuals inside this population that will be having children and because the population is assumed to be constant so therefore $ b = 0 $ and due to this assumption and the parameters of the system  $ b > \mu $ then the per capita death rate must also be equal to 0 so $\mu =0$. This makes logical sense as a cohort like that of the population of the Olympic games will be young to middle age individuals in peak health condition to support competing at the international stage. This then simplifies system (3) to a dynamical system modelled by:
  
 \begin{align}
@@ -62,7 +61,6 @@ S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is th
 Using Python with imported package numpy and matplotlib to display models that would display possible epidemic conditions inside the Olympic games. The removal rate $\alpha $ was based of values using in similar models from the Covid-19 pandemic with $\alpha = \frac{1}{6}$ \cite{ shapiro2021adaptive}. On averages athletes tend to start to arrive at the games 7-10 days before opening ceremonies and tend to leave shortly after their events finish due to Covid-19 protocols still in place post the Tokyo 2020 Olympics. Meaning the village can only have a largest possible time span of 30 day if the turnover to Paralympics is not included and as this would be a totally new population it is not included with the village time allowance. then using average incubation periods based on common averages of past epidemics  $\tau$ is set to 2.9 as the average delay \cite{cori2012estimating}. The transmission constant $\gamma$ can vary by disease and the value of the transmission rate is now a possible variable of interest to see what is the minimum possible value of $\gamma$ to cause a local epidemic in the Olympic village for the summer and winter games and if this is a value within reason for a realistic disease that could be transmitted with the village under current conditions of the Olympic village. For all models, there is an assumption that only one infected individual is entering the village under any conditions.
 
 \section*{Results}
-
 Due to the popularity of the sports participating in the games and the types of sports including more team sports in the summer Olympics there is a large disparity in the sizes of the villages between the summer and winter games. The summer village for Paris 2024 was that of approximately 14500 athletes\cite{fenton_2024_take} compared to the smaller number athletes in the recently ended winter games in Milano Cortina. The althetes were split between multiple villages with the largest of the villages present at the games had only approximately 1500 athletes\cite{mcdermott_2026_inside}, which is a significant difference in population. This difference in population affects the effectiveness of the transmission rate as with a larger population is decreased. 
 
 \begin{figure}[H]
@@ -125,7 +123,8 @@ Figure 3 displays the a $\gamma$ value for which that displays an epidemic event
 both figures 5 and 6 display a solution for both the winter and summer games where by equation (6) $R_0=1.17$ so that both figures show an epidemic disease model as displayed by the infectious population not returning to zero after the initial peak in the number of infectious individuals. this is supported by the theorem(7) where is $R_0>1$ creating an epidemic solution. It is important to note that this all occurs under the assumption where the Olympic village is a closed population with no interactions with anyone outside on the population where in reality this is simply not true as athletes and support staff are interacting with family, fans and other members of the general population when they are at competition if after they are finished competing where they are often exploring the host city coming in contact with many other individuals quickly increasing there contacts and increasing the transmission constant and the involved population this quickly increase the dynamics of the system and could be an area of further research as it help to display the true risk posed by the large congregation of athletes.
 
 \section*{Conclusion} 
-application to other international sporting events commonwealth games, Pan American games, Junior Olympics, world cups, tournaments and circuits. And possible non sporting applications to similar living conditions such as boarding school and university residences.
+The exact impact of a epidemic event within the host city of the Olympic games is not accurately represented through these graphs. As the number of interconnecting communities on a global scale is larger then the scope of this particular model. As then a model would have to include discarded variables and inter- and intra- population contact variables to accurately distinguish the possible impacts of a epidemic event from inside the Olympic village. Although it may have some interesting applications to other international sporting events commonwealth games, Pan American games, Junior Olympics, world cups, tournaments and circuits. And possible non sporting applications to similar living conditions such as boarding school and university residences. As Although the Olympic village is a unique population is it by no means an individual instance of this kind of gathering. This type of model can give a good initial outlook at this type of population in its simplest form can create risk for surrounding populations. 
+
 \bibliography{mod2-References}
 \bibliographystyle{plain}
 
